Bug 81627 - [WK2] HTTP authentication regression tests fail
Summary: [WK2] HTTP authentication regression tests fail
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alexey Proskuryakov
URL:
Keywords: InRadar, LayoutTestFailure
: 106405 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-19 21:01 PDT by Tim Horton
Modified: 2014-04-09 00:38 PDT (History)
10 users (show)

See Also:


Attachments
proposed fix (40.46 KB, patch)
2014-04-08 00:22 PDT, Alexey Proskuryakov
andersca: review+
buildbot: commit-queue-
Details | Formatted Diff | Diff
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 (556.20 KB, application/zip)
2014-04-08 03:27 PDT, Build Bot
no flags Details
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 (555.41 KB, application/zip)
2014-04-08 04:24 PDT, Build Bot
no flags Details
patch for landing (40.75 KB, patch)
2014-04-08 23:04 PDT, Alexey Proskuryakov
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Horton 2012-03-19 21:01:41 PDT
http/tests/xmlhttprequest/basic-auth-default.html
http/tests/xmlhttprequest/basic-auth.html
http/tests/xmlhttprequest/re-login-async.html
http/tests/xmlhttprequest/workers/abort-exception-assert.html

See: http://build.webkit.org/results/Lion%20Intel%20Debug%20%28WebKit2%20Tests%29/r111269%20%285060%29/results.html

100% reproducible locally

Skipping for now.
Comment 1 Tim Horton 2012-03-19 21:04:44 PDT
Skipped in http://trac.webkit.org/changeset/111346
Comment 2 Radar WebKit Bug Importer 2012-03-19 21:05:17 PDT
<rdar://problem/11079296>
Comment 3 Alexey Proskuryakov 2014-04-05 21:54:48 PDT
1. WebKitTestRunner doesn't implement PageLoaderClient.canAuthenticateAgainstProtectionSpaceInFrame. If we add it, and make it return true, tests will pass.

2. In WebKit1, the unimplemented delegate defaults to true for all "old" authentication schemes, and only defaults to false for new ones. This was presumably necessary to not break clients that can't show UI for client certificates.

In WebKit2, both C and Objective-C APIs default to false unconditionally. This may be not the most reasonable behavior.

3. In this particular case - loading a resource with explicitly provided credentials - we probably shouldn't ask the client whether it supports password based authentication at all unless the credentials turn out to be incorrect. The fix for this would be in ResourceHandle in WebCore.

So, fixing the tests by implementing the client call is trivial, but we should think about how the API should work.
Comment 4 Alexey Proskuryakov 2014-04-07 23:29:51 PDT
> 3. In this particular case - loading a resource with explicitly provided credentials - we probably shouldn't ask the client whether it supports password based authentication at all unless the credentials turn out to be incorrect. The fix for this would be in ResourceHandle in WebCore.

Filed bug 131348 for this.
Comment 5 Alexey Proskuryakov 2014-04-07 23:55:25 PDT
> http/tests/xmlhttprequest/workers/abort-exception-assert.html

This test appears unrelated to the previous three, but it currently passes anyway.
Comment 6 Alexey Proskuryakov 2014-04-07 23:56:48 PDT
*** Bug 106405 has been marked as a duplicate of this bug. ***
Comment 7 Alexey Proskuryakov 2014-04-08 00:22:12 PDT
Created attachment 228815 [details]
proposed fix
Comment 8 Build Bot 2014-04-08 03:27:15 PDT
Comment on attachment 228815 [details]
proposed fix

Attachment 228815 [details] did not pass mac-wk2-ews (mac-wk2):
Output: http://webkit-queues.appspot.com/results/5659814722011136

New failing tests:
platform/mac/fast/scrolling/scroll-iframe-latched-mainframe.html
platform/mac/fast/scrolling/scroll-div-latched-mainframe.html
http/tests/misc/dns-prefetch-control.html
platform/mac/fast/scrolling/scroll-select-latched-mainframe.html
Comment 9 Build Bot 2014-04-08 03:27:19 PDT
Created attachment 228826 [details]
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2

The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews.
Bot: webkit-ews-10  Port: mac-mountainlion-wk2  Platform: Mac OS X 10.8.5
Comment 10 Build Bot 2014-04-08 04:24:12 PDT
Comment on attachment 228815 [details]
proposed fix

Attachment 228815 [details] did not pass mac-wk2-ews (mac-wk2):
Output: http://webkit-queues.appspot.com/results/6504239652143104

New failing tests:
platform/mac/fast/scrolling/scroll-iframe-latched-mainframe.html
platform/mac/fast/scrolling/scroll-div-latched-mainframe.html
http/tests/misc/dns-prefetch-control.html
platform/mac/fast/scrolling/scroll-select-latched-mainframe.html
Comment 11 Build Bot 2014-04-08 04:24:16 PDT
Created attachment 228827 [details]
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2

The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews.
Bot: webkit-ews-16  Port: mac-mountainlion-wk2  Platform: Mac OS X 10.8.5
Comment 12 Alexey Proskuryakov 2014-04-08 09:41:24 PDT
> http/tests/misc/dns-prefetch-control.html

This complaint is correct, this test probably started seeing bug 131349. I'll check.

E-mailed Brent about missing results in latching tests.
Comment 13 Alexey Proskuryakov 2014-04-08 23:02:00 PDT
(In reply to comment #12)
> > http/tests/misc/dns-prefetch-control.html
> 
> This complaint is correct, this test probably started seeing bug 131349. I'll check.

Turns out that this was different. We were getting server trust challenge on this test.

Fixing by only returning true for password based authentication schemes.
Comment 14 Alexey Proskuryakov 2014-04-08 23:04:53 PDT
Created attachment 228942 [details]
patch for landing
Comment 15 WebKit Commit Bot 2014-04-09 00:38:08 PDT
Comment on attachment 228942 [details]
patch for landing

Clearing flags on attachment: 228942

Committed r167007: <http://trac.webkit.org/changeset/167007>
Comment 16 WebKit Commit Bot 2014-04-09 00:38:14 PDT
All reviewed patches have been landed.  Closing bug.