[WK2] HTTP authentication regression tests fail https://bugs.webkit.org/show_bug.cgi?id=81627 <rdar://problem/11079296>

Reviewed by Anders Carlsson.

Tools:

* WebKitTestRunner/TestController.h:
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::createWebViewWithOptions): Added canAuthenticateAgainstProtectionSpaceInFrame
to pageLoaderClient structure.
(WTR::TestController::canAuthenticateAgainstProtectionSpaceInFrame): Return true
for password based authentication (we do get server trust challenges on some tests,
which WKTR can't handle).
When this client call is not implemented or returns false, didReceiveAuthenticationChallengeInFrame
calls won't be made, at least on CFNetwork based platforms.
(WTR::TestController::didReceiveAuthenticationChallengeInFrame): Changed the output
to omit <unknown>. The resource is always unknown with WK2, and it doesn't really
make sense to associate auth requests with individual resources - there can be
multiple resources loading at once from the same protection space, so WebKit1 API
that had a resource identifier was inherently racy.

LayoutTests:

* platform/mac-wk2/TestExpectations: Unskipped tests that now pass. Marked three
tests as failing, because enabling auth uncovered that they are failing
(in browser as well).

* platform/wk2/http: Added.
* platform/wk2/http/tests: Added.
* platform/wk2/http/tests/loading: Added.
* platform/wk2/http/tests/loading/authentication-after-redirect-stores-wrong-credentials: Added.
* platform/wk2/http/tests/loading/authentication-after-redirect-stores-wrong-credentials/authentication-after-redirect-stores-wrong-credentials-expected.txt: Copied from LayoutTests/http/tests/loading/authentication-after-redirect-stores-wrong-credentials/authentication-after-redirect-stores-wrong-credentials-expected.txt.
* platform/wk2/http/tests/loading/basic-auth-resend-wrong-credentials-expected.txt: Copied from LayoutTests/http/tests/loading/basic-auth-resend-wrong-credentials-expected.txt.
* platform/wk2/http/tests/loading/basic-credentials-sent-automatically-expected.txt: Copied from LayoutTests/http/tests/loading/basic-credentials-sent-automatically-expected.txt.
* platform/wk2/http/tests/misc: Added.
* platform/wk2/http/tests/misc/401-alternative-content-expected.txt: Copied from LayoutTests/http/tests/misc/401-alternative-content-expected.txt.
* platform/wk2/http/tests/misc/authentication-redirect-1: Added.
* platform/wk2/http/tests/misc/authentication-redirect-1/authentication-sent-to-redirect-cross-origin-expected.txt: Copied from LayoutTests/http/tests/misc/authentication-redirect-1/authentication-sent-to-redirect-cross-origin-expected.txt.
* platform/wk2/http/tests/misc/authentication-redirect-2: Added.
* platform/wk2/http/tests/misc/authentication-redirect-2/authentication-sent-to-redirect-same-origin-expected.txt: Copied from LayoutTests/http/tests/misc/authentication-redirect-2/authentication-sent-to-redirect-same-origin-expected.txt.
* platform/wk2/http/tests/misc/authentication-redirect-4: Added.
* platform/wk2/http/tests/misc/authentication-redirect-4/authentication-sent-to-redirect-same-origin-url-expected.txt: Copied from LayoutTests/http/tests/misc/authentication-redirect-4/authentication-sent-to-redirect-same-origin-url-expected.txt.
* platform/wk2/http/tests/security: Added.
* platform/wk2/http/tests/security/401-logout: Added.
* platform/wk2/http/tests/security/401-logout/401-logout-expected.txt: Copied from LayoutTests/http/tests/security/401-logout/401-logout-expected.txt.
* platform/wk2/http/tests/xmlhttprequest: Added.
* platform/wk2/http/tests/xmlhttprequest/failed-auth-expected.txt: Copied from LayoutTests/http/tests/xmlhttprequest/failed-auth-expected.txt.
* platform/wk2/http/tests/xmlhttprequest/remember-bad-password-expected.txt: Copied from LayoutTests/http/tests/xmlhttprequest/remember-bad-password-expected.txt.
WebKit2 results are the same as WebKit1, except that they lack resource URL. That
is expected with WebKit2 API.


Canonical link: https://commits.webkit.org/149492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167007 268f45cc-cd09-0410-ab3c-d52691b4dbfc